# AI-Now

./: .gitignore  FIRECRAWL_SETUP.md  QUICKSTART.md  README.md  __init__.py  generate-keys.py  package-lock.json  package.json  reset-database.sh  start-services.sh
AI-Now/: .env.example  (+6 more)
walker_app_api/: .env.example  .gitignore  AGGREGATION_REFACTOR_PLAN.md  MIGRATIONS.md  __init__.py  alembic.ini  check_db.py  cleanup_database.py  clear_database.py  main.py  migrate.py  pyproject.toml  render-build.sh  render.yaml  requirements.txt  run_unified_aggregation.py  verify_sources.py
walker_app_api/alembic/: env.py
walker_app_api/alembic/versions/: 4bcfb5f77c1a_add_users_and_preferences.py  a1b2c3d4e5f6_add_user_display_preferences.py  b6d059d6a00c_merge_heads.py  b70393a23515_simplify_content_items_url_clicks_drop_.py  c58f2a9e4b3a_add_analytics_and_aggregation_logging.py  d1e2f3a4b5c6_add_aggregation_sources.py  e2f3a4b5c6d7_add_extraction_method_and_feed_url.py  e477fc9e389e_initial_migration.py
walker_app_api/app/api/: deps.py
walker_app_api/app/api/v1/: api.py
walker_app_api/app/api/v1/endpoints/: aggregation.py  analytics.py  auth.py  content.py  items.py  sources.py  user_endpoints.py  users.py
walker_app_api/app/core/: auth.py  config.py  security.py
walker_app_api/app/crud/: __init__.py  analytics.py  content.py  user.py
walker_app_api/app/db/: base.py  models.py
walker_app_api/app/models/: content.py
walker_app_api/app/schemas/: auth.py  preferences.py  user.py
walker_app_api/app/services/: analytics_queue.py  auth_service.py  content_aggregator.py  content_aggregator_firecrawl.py  firecrawl_service.py  preference_service.py  source_registry.py
walker_app_api/app/services/aggregation/: __init__.py  aggregator.py  html_cleaner.py  llm_analyzer.py  registry.py  rss_discovery.py  user_source_engine.py
walker_app_api/app/services/aggregation/plugins/: __init__.py  anthropic.py  deepmind.py  deepseek.py  dwarkesh_podcast.py  huggingface.py  moonshot.py  nvidia_podcast.py  openai.py  perplexity.py  qwen.py  rss.py  tavily.py  thinking_machines.py  xai.py  youtube.py
walker_app_api/app/services/aggregation_sources/: _apple_podcast_scraper.py  _lab_scraper_utils.py  _webdriver.py  anthropic_agg.py  deepmind_agg.py  deepseek_agg.py  dwarkesh_podcast_agg.py  huggingface_agg.py  moonshot_agg.py  nvidia_podcast_agg.py  openai_agg.py  perplexity_agg.py  qwen_agg.py  tavily_trending.py  thinkingmachines_agg.py  xai_agg.py
walker_app_api/tests/: conftest.py  deployment_check.py  test_aggregation_plugins.py  test_aggregation_security.py  test_analytics_api.py  test_content_aggregator.py  test_content_api.py  test_ingest_endpoint.py  test_user_sources.py
(+47 files in other folders)
