[project]
name = "walker-app-api"
version = "0.1.0"
description = "FastAPI backend for AI-Now content aggregation"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic[email]==2.5.0",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.6",
    "httpx==0.25.2",
    "requests==2.31.0",
    "sqlalchemy==2.0.23",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "feedparser==6.0.10",
    "beautifulsoup4==4.12.2",
    "lxml==4.9.3",
    "numpy>=1.25.0",
    "scikit-learn>=1.3.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "nltk>=3.8",
    "textstat>=0.7.0",
    "sentence-transformers>=2.2.0",
    "firecrawl-py==0.0.16",
    "cloudscraper==1.2.71",
]

[tool.uv]
dev-dependencies = []
