[project]
name = "walker-app-api"
version = "0.1.0"
description = "FastAPI backend for AI-Now content aggregation"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27",
    "requests>=2.32.2",
    "sqlalchemy==2.0.23",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "feedparser==6.0.10",
    "beautifulsoup4==4.12.2",
    "tavily-python>=0.7.12",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "selenium>=4.10.0",
    "webdriver-manager>=4.0.1",
    "gunicorn>=21.2.0",
    "argon2-cffi>=23.1.0",
    "PyJWT>=2.9.0",
    "openai>=1.40.0,<2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=1.3.0",
]
